Removed kubernetes, it was an overkill. Application running on docker